# bonio

./: .gitattributes  .gitignore  CLAUDE.md  README.md  TASK.md  hiclaw.json
android/: build_output.txt  build_output_manifest.txt  settings.gradle.kts
assets/: cat-angry.lottie  cat-appear.lottie  cat-bored.json  cat-disappear.lottie  cat-doubletapping.lottie  cat-dragging.lottie  cat-enddrag.lottie  cat-error-shake.lottie  cat-falling.lottie  cat-finishing.json  cat-finishing.lottie  cat-goback.lottie  cat-idle-left.json  cat-idle-left.lottie  cat-idle-to-listening.lottie  cat-idle.lottie  cat-jumping.lottie  cat-landing.lottie  cat-launching.lottie  cat-listening.json  cat-listening.lottie  cat-longpressing.lottie  cat-running.lottie  cat-speaking.lottie  cat-swiping.lottie  cat-take-photo.lottie  cat-typing.json  cat-typing.lottie  cat-waiting.lottie  cat-working.lottie
debug/: android_log.txt  android_log_raw.txt  boji_big_log.txt  boji_big_log_filtered.txt  boji_pid_logs.txt  boji_search_results.txt  full_raw_log.txt
design/: boji-desktop-capabilities.md  boji-desktop-伴读-implementation.md  boji-desktop-记一记-implementation-plan.md  chat_redesign_wireframe.md  desktop_avatar_design.md  server_completion_plan.md  server_design.md  voice_input_plan.md
desktop/: .gitignore  (+2 more)
desktop/lib/platform/ocr/native/: CMakeLists.txt  build.bat  paddle_ocr_wrapper.cpp  paddle_ocr_wrapper.h
server/: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  cmake_install.cmake
server/arch-design/: gateway.md
server/build-android-arm64/: CMakeCache.txt
server/cmake/: FindLibWebSockets.cmake
server/conf/: config.json.example
server/conf/skills/builtin/android-communication/: SKILL.md
server/conf/skills/builtin/android-file-manager/: SKILL.md
server/conf/skills/builtin/android-system-control/: SKILL.md
server/conf/skills/builtin/notification-secretary/: SKILL.md
server/conf/skills/builtin/phone-use-android/: SKILL.md
server/conf/skills/builtin/phone-use-harmonyos/: SKILL.md
server/conf/skills/builtin/time-utils/: SKILL.md
server/docs/: GATEWAY_BACKENDS.md  PORTING_PLAN.md  cli-interaction.md  deps-libwebsockets.md
server/include/hiclaw/agent/: agent.hpp
server/include/hiclaw/cli/: cli.hpp
server/include/hiclaw/config/: config.hpp  default_providers.hpp
server/include/hiclaw/cron/: schedule.hpp  store.hpp
server/include/hiclaw/memory/: memory.hpp
server/include/hiclaw/net/: async_agent.hpp  avatar_command.hpp  call_handler.hpp  gateway.hpp  health_monitor.hpp  http_client.hpp  idle_manager.hpp  ilink_http_client.hpp  intent_router.hpp  notification_handler.hpp  serve.hpp  tool_router.hpp  wechat_adapter.hpp  wecom_ws_client.hpp
server/include/hiclaw/observability/: log.hpp
server/include/hiclaw/providers/: ollama.hpp  openai_compatible.hpp
server/include/hiclaw/security/: path_guard.hpp
server/include/hiclaw/session/: store.hpp
server/include/hiclaw/skills/: skill_manager.hpp
server/include/hiclaw/tools/: memo_tool.hpp  tool.hpp
server/include/hiclaw/types/: message.hpp
server/scripts/: README_ANDROID.md  build-android-all.bat  build-android-arm64-v8a.bat  build-android-arm64-v8a.sh  build-android.bat  build-android.sh  build-linux-amd64.sh  build-macos-arm64.sh  build-macos.sh  build-mbedtls.sh  build-ohos-arm64.bat  build-ohos-arm64.sh  build-ohos.bat  build-ohos.sh  build-win-amd64.bat  build-win-x64.bat  check-env.bat  deploy-and-verify.bat  deploy-android.bat  deploy-android.sh
server/src/: main.cpp
server/src/agent/: agent.cpp
server/src/cli/: cli.cpp
server/src/config/: config.cpp
server/src/cron/: schedule.cpp  store.cpp
server/src/memory/: file_memory.cpp
server/src/net/: async_agent.cpp  call_handler.cpp  gateway.cpp  health_monitor.cpp  http_client.cpp  idle_manager.cpp  ilink_http_client.cpp  intent_router.cpp  notification_handler.cpp  serve.cpp  tool_router.cpp  wechat_adapter.cpp  wecom_ws_client.cpp
server/src/observability/: log.cpp
server/src/providers/: ollama.cpp  openai_compatible.cpp
server/src/security/: path_guard.cpp
server/src/session/: store.cpp
server/src/skills/: skill_manager.cpp
server/src/tools/: memo_tool.cpp  tool.cpp
skills/phone-use-agent/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
skills/phone-use-agent/android/: SKILL.md
skills/phone-use-agent/cmake/: Android.cmake  HarmonyOS-toolchain.cmake  HarmonyOS.cmake  Host.cmake
skills/phone-use-agent/config/: phone-use-harmonyos.conf
skills/phone-use-agent/deploy/: deploy.bat  deploy_test.bat
skills/phone-use-agent/harmonyos/: SKILL.md
skills/phone-use-agent/include/: AccessibilityHelper.h  AndroidPackages.h  AppManager.h  AppPackages.h  AutoGLMClient.h  CliArgs.h  Config.h  ConfigManager.h  ExitCodes.h  HttpClient.h  SystemPrompt.h  TaskExecutor.h  UIInspector.h
skills/phone-use-agent/include/core/: TaskExecutor.h
skills/phone-use-agent/include/platform/: Platform.h
skills/phone-use-agent/script/: build_android.ps1  build_android.sh  build_harmonyos.ps1  build_harmonyos.sh
skills/phone-use-agent/skills/cap-cut/: SKILL.md
skills/phone-use-agent/skills/harmonyos-device-commands/: SKILL.md
skills/phone-use-agent/skills/harmoyos-cli/: README.md
skills/phone-use-agent/skills/phone-use-android/: SKILL.md
skills/phone-use-agent/skills/phone-use-harmonyos/: SKILL.md
skills/phone-use-agent/src/: AccessibilityHelper.cpp  AppManager.cpp  AutoGLMClient.cpp  CliArgs.cpp  ConfigManager.cpp  HttpClient.cpp  TaskExecutor.cpp  UIInspector.cpp  main.cpp
skills/phone-use-agent/src/core/: TaskExecutor.cpp
skills/phone-use-agent/src/platform/: PlatformFactory.cpp
skills/phone-use-agent/src/platform/android/: AndroidPlatform.cpp  AndroidPlatform.h
skills/phone-use-agent/src/platform/harmonyos/: HarmonyOSPlatform.cpp  HarmonyOSPlatform.h
skills/phone-use-agent/test/: CMakeLists.txt  network_test.cpp  size_check.cpp  test_agent_flow.cpp  test_autoglm_logic.cpp  test_cli.cpp  test_executor_ut.cpp  test_glm.cpp
skills/phone-use-agent/workflows/: init.md
(+338 files in other folders)
