cmake_minimum_required(VERSION 3.14)
project(paddle_ocr_plugin LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(WIN32)
  add_library(paddle_ocr_plugin SHARED paddle_ocr_wrapper.cpp)
  target_compile_options(paddle_ocr_plugin PRIVATE /O2 /EHsc)
  target_link_libraries(paddle_ocr_plugin PRIVATE)
elseif(APPLE)
  add_library(paddle_ocr_plugin SHARED paddle_ocr_wrapper.cpp)
  target_compile_options(paddle_ocr_plugin PRIVATE -O2 -fPIC)
  target_link_libraries(paddle_ocr_plugin PRIVATE ${CMAKE_DL_LIBS})
else()
  add_library(paddle_ocr_plugin SHARED paddle_ocr_wrapper.cpp)
  target_compile_options(paddle_ocr_plugin PRIVATE -O2 -fPIC)
  target_link_libraries(paddle_ocr_plugin PRIVATE ${CMAKE_DL_LIBS})
endif()
